@@ -1,3 +1,7 @@
+2008-07-07  Mirco Bauer <meebey@meebey.net> 
+
+	* Protocols/Irc/IrcProtocolManager.cs: Implemented lag indicator.
+
 2008-06-30  Mirco Bauer <meebey@meebey.net> 
 
 	* Protocols/Irc/IrcProtocolManager.cs: Pass IRC errors to frontend.
